--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,6 +26,7 @@
 // Toggle global options
 $enable-gradients: true;
 $enable-shadows: true;
+// $enable-negative-margins: true;
 
 $offcanvas-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 
@@ -35,6 +36,7 @@ $offcanvas-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/bootstrap";
 @import "bootstrap-icons/font/bootstrap-icons.css";
+@import "flatpickr/dist/flatpickr.css";
 // Customize some defaults
 $body-color: #333;
 $body-bg: #fff;
